generated/checkers/gen/AllGen-Buffer-Overflow-c6087b82a9146826564a55c5ca0164cac40348f5/build_logs/syntax-repair-08/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:210:36: error: no matching function for call to ‘clang::ento::ProgramState::getSVal(const clang::ento::MemRegion*&, const clang::LocationContext*) const’
  210 |       SVal LHSSVal = State->getSVal(LHSReg, C.getLocationContext());
      |                      ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/RangedConstraintManager.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporterVisitors.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:805:13: note: candidate: ‘clang::ento::SVal clang::ento::ProgramState::getSVal(const clang::Stmt*, const clang::LocationContext*) const’
  805 | inline SVal ProgramState::getSVal(const Stmt *Ex,
      |             ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:805:47: note:   no known conversion for argument 1 from ‘const clang::ento::MemRegion*’ to ‘const clang::Stmt*’
  805 | inline SVal ProgramState::getSVal(const Stmt *Ex,
      |                                   ~~~~~~~~~~~~^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:380:8: note: candidate: ‘clang::ento::SVal clang::ento::ProgramState::getSVal(clang::ento::Loc, clang::QualType) const’
  380 |   SVal getSVal(Loc LV, QualType T = QualType()) const;
      |        ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:380:20: note:   no known conversion for argument 1 from ‘const clang::ento::MemRegion*’ to ‘clang::ento::Loc’
  380 |   SVal getSVal(Loc LV, QualType T = QualType()) const;
      |                ~~~~^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:828:13: note: candidate: ‘clang::ento::SVal clang::ento::ProgramState::getSVal(const clang::ento::MemRegion*, clang::QualType) const’
  828 | inline SVal ProgramState::getSVal(const MemRegion* R, QualType T) const {
      |             ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/ProgramState.h:828:64: note:   no known conversion for argument 2 from ‘const clang::LocationContext*’ to ‘clang::QualType’
  828 | inline SVal ProgramState::getSVal(const MemRegion* R, QualType T) const {
      |                                                       ~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:248:66: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  248 |   const MemRegion *BoundRegForArray = State->get<ArraySafeLenMap>(ArrReg);
      |                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
      |                                                                  |
      |                                                                  clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
